@@ -9,6 +9,7 @@ Checkbox, (A)uto-load tapes/disks, auto_load, KEYBOARD_a
 Checkbox, Use .(s)lt traps, slt_traps, KEYBOARD_s
 Checkbox, Allow (w)rites to ROM, writable_roms, KEYBOARD_w
 Checkbox, A(u)to-save settings, autosave_settings, KEYBOARD_u
+Checkbox, (C)olour TV, colour_tv, KEYBOARD_c
 
 rzx
 RZX Options
